crates/engine/tests/integration/snapshots/integration__oracle_parser__snapshot_bronzehide_lion.snap
---
source: crates/engine/tests/integration/oracle_parser.rs
expression: result
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "GenericEffect",
        "static_abilities": [
          {
            "mode": "Continuous",
            "affected": {
              "type": "SelfRef"
            },
            "modifications": [
              {
                "type": "AddKeyword",
                "keyword": "Indestructible"
              }
            ],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "gain indestructible"
          }
        ],
        "duration": "UntilEndOfTurn",
        "target": null
      },
      "cost": {
        "type": "Mana",
        "cost": {
          "type": "Cost",
          "shards": [
            "Green",
            "White"
          ],
          "generic": 0
        }
      },
      "sub_ability": null,
      "duration": "UntilEndOfTurn",
      "description": "{G}{W}: ~ gains indestructible until end of turn.",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [
    {
      "mode": "ChangesZone",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "ChangeZone",
          "origin": "Graveyard",
          "destination": "Battlefield",
          "target": {
            "type": "SelfRef"
          },
          "owner_library": false,
          "enter_transformed": false,
          "enter_tapped": false,
          "enters_attacking": false
        },
        "cost": null,
        "sub_ability": {
          "kind": "Spell",
          "effect": {
            "type": "ReturnAsAura",
            "enchant_filter": {
              "type": "Typed",
              "type_filters": [
                "Creature"
              ],
              "controller": "You",
              "properties": []
            },
            "grants": [
              {
                "type": "RemoveAllAbilities"
              },
              {
                "type": "GrantAbility",
                "definition": {
                  "kind": "Activated",
                  "effect": {
                    "type": "GenericEffect",
                    "static_abilities": [
                      {
                        "mode": "Continuous",
                        "affected": {
                          "type": "Typed",
                          "type_filters": [
                            "Creature"
                          ],
                          "controller": null,
                          "properties": [
                            {
                              "type": "EnchantedBy"
                            }
                          ]
                        },
                        "modifications": [
                          {
                            "type": "AddKeyword",
                            "keyword": "Indestructible"
                          }
                        ],
                        "condition": null,
                        "affected_zone": null,
                        "effect_zone": null,
                        "active_zones": [],
                        "characteristic_defining": false,
                        "description": "gain indestructible"
                      }
                    ],
                    "duration": "UntilEndOfTurn",
                    "target": null
                  },
                  "cost": {
                    "type": "Mana",
                    "cost": {
                      "type": "Cost",
                      "shards": [
                        "Green",
                        "White"
                      ],
                      "generic": 0
                    }
                  },
                  "sub_ability": null,
                  "duration": "UntilEndOfTurn",
                  "description": "{G}{W}: Enchanted creature gains indestructible until end of turn",
                  "target_prompt": null,
                  "condition": null,
                  "optional_targeting": false,
                  "optional": false,
                  "forward_result": false
                }
              }
            ]
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false,
          "sub_link": "SequentialSibling"
        },
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "valid_card": {
        "type": "SelfRef"
      },
      "origin": "Battlefield",
      "destination": "Graveyard",
      "trigger_zones": [
        "Graveyard"
      ],
      "phase": null,
      "optional": false,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "When ~ dies, return it to the battlefield. It's an Aura enchantment with enchant creature you control and \"{G}{W}: Enchanted creature gains indestructible until end of turn,\" and it loses all other abilities.",
      "constraint": null,
      "condition": null,
      "batched": false
    }
  ],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
