crates/engine/tests/integration/snapshots/integration__oracle_parser__snapshot_counterspell.snap
---
source: crates/engine/tests/integration/oracle_parser.rs
assertion_line: 48
expression: result
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "Counter",
        "target": {
          "type": "StackSpell"
        }
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "Counter target spell.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
